--- a/lesson-5/css/fonts.css
+++ b/lesson-5/css/fonts.css
@@ -1,8 +1,6 @@
-
-/* Через Google Fonts */
-/* @import url("fonts.css"); */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+/*!* Через Google Fonts *!*/
+/*@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');*/
+/*@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap');*/
 
 
 /* Підключення вручну */
