--- a/lesson-5/css/style.css
+++ b/lesson-5/css/style.css
@@ -2,8 +2,8 @@
 @import url("fonts.css");
 
 /* Через Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap');
 
 /*Скидання стилів*/
 @import url("reset.css");
@@ -22,12 +22,13 @@ h4 {
 
 .header-title h1 {
     font-size: 30px;
+    font-weight: 600;
     color: yellow;
     text-shadow: dodgerblue 1px 3px 2px;
     text-decoration: underline;
 }
 
-/* 1 частина дз - макет з Figma (Why Us For...) */
+/* 1 частина дз - макет з Figma (Why us for...) */
 .main-container {
     width: 692px;
     color: #7D7D7D;
@@ -66,12 +67,23 @@ h4 {
 
 .information-block ul {
     font-weight: 500;
-    list-style-type: disc;
-    padding-left: 20px;
+    padding-left: 16px;
+    margin-left: 16px;
+}
+
+.information-block > ul > li {
+    list-style: disc;
 }
 
 .information-block ol {
     font-weight: 500;
+    padding-left: 16px;
+    margin-left: 16px;
+
+}
+
+.information-block > ol > li {
+    list-style: decimal-leading-zero;
 }
 
 /* 2 частина дз - стаття */
