--- a/lesson-5/css/style.css
+++ b/lesson-5/css/style.css
@@ -54,6 +54,7 @@ h4 {
 /* 1 частина дз - макет з Figma (Project Information) */
 .information-block {
     width: 830px;
+    line-height: 1.46;
 }
 
 .information-block h2 {
@@ -142,7 +143,7 @@ h4 {
 .amithen-block span {
     color: aqua;
     text-transform: capitalize;
-    text-shadow: blue 1px 1px 2px;
+    text-shadow: darkblue 1px 1px 2px;
 }
 
 
