--- a/lesson-6/css/style.css
+++ b/lesson-6/css/style.css
@@ -19,7 +19,7 @@ body {
     margin-bottom: 30px;
 }
 
-/* Макет з Figma (Why us...) */
+/* Figma (Why us...) */
 
 .main-container {
     max-width: 700px;
@@ -65,6 +65,8 @@ body {
     color: #7D7D7D;
     line-height: 1.46;
 }
+
+/* Figma (Benefit) */
 
 .main-block-benefit {
     max-width: 692px;
@@ -121,13 +123,14 @@ body {
     max-width: 1220px;
     margin: 0 auto;
     font-size: 0;
-
 }
 
 .jewellery-container {
     padding: 21px 0;
     display: inline-block;
     margin-bottom: 130px;
+    /*height: 518px;*/
+
 }
 
 .jewellery-content {
@@ -148,7 +151,7 @@ body {
 .jewellery-content h3 {
     max-width: 526px;
     color: #0E333D;
-    font-family: DM Serif Text, serif;
+    font-family: 'DM Serif Text', serif;
     font-size: 59px;
     line-height: 1.46;
     text-transform: capitalize;
@@ -168,13 +171,12 @@ body {
 .jewellery-image {
     display: inline;
     padding-left: 19px;
-    padding-bottom: 19px;
-
 }
 
 .jewellery-image img {
-    max-height: 100%;
-    display: inline;
+    max-height: 500px;
+    /*max-height: 100%;*/
+    display: inline-block;
     margin-right: 22px;
 
 }
