--- a/lesson-7/css/fonts.css
+++ b/lesson-7/css/fonts.css
@@ -1,2 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap');
+
+
+@font-face {
+    font-family: 'Causten';
+    src: url('../fonts/Causten-Regular-1.woff2') format('woff2'),
+         url('../fonts/Causten-Regular-1.woff') format('woff');
+    font-weight: 400;
+    font-display: swap;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Causten';
+    src: url('../fonts/Causten-Bold-1.woff2') format('woff2'),
+    url('../fonts/Causten-Bold-1.woff') format('woff');
+    font-weight: 700;
+    font-display: swap;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Core Sans C';
+    src: url('../fonts/CoreSansC-55Medium.woff2') format('woff2'),
+    url('../fonts/CoreSansC-55Medium.woff') format('woff');
+    font-weight: 600;
+    font-display: swap;
+    font-style: normal;
+}
+
+
+
