--- a/lesson-7/css/fonts.css
+++ b/lesson-7/css/fonts.css
@@ -1,8 +1,10 @@
+/* Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap');
 
+/* Підключення вручну */
 
 @font-face {
     font-family: 'Causten';
@@ -24,8 +26,8 @@
 
 @font-face {
     font-family: 'Core Sans C';
-    src: url('../fonts/CoreSansC-55Medium.woff2') format('woff2'),
-    url('../fonts/CoreSansC-55Medium.woff') format('woff');
+    src: url('../fonts/Core-sans-n-65-bold.woff2') format('woff2'),
+    url('../fonts/Core-sans-n-65-bold.woff') format('woff');
     font-weight: 600;
     font-display: swap;
     font-style: normal;
