--- a/lesson-7/css/fonts.css
+++ b/lesson-7/css/fonts.css
@@ -26,8 +26,8 @@
 
 @font-face {
     font-family: 'Core Sans C';
-    src: url('../fonts/Core-sans-n-65-bold.woff2') format('woff2'),
-    url('../fonts/Core-sans-n-65-bold.woff') format('woff');
+    src: url('../fonts/CoreSansC-65Bold.woff2') format('woff2'),
+    url('../fonts/CoreSansC-65Bold.woff') format('woff');
     font-weight: 600;
     font-display: swap;
     font-style: normal;
