--- a/lesson-7/css/style.css
+++ b/lesson-7/css/style.css
@@ -59,13 +59,12 @@ h6 {
 }
 
 /* Загальні для заголовків */
-
 .main-block-licencing h3,
 h4 {
     color: #37393F;
     font-family: Poppins, sans-serif;
     font-weight: 700;
-    line-height: 1.2;
+    line-height: 1.21;
 }
 
 .licencing-title h2 {
@@ -73,7 +72,7 @@ h4 {
     color: #37393F;
     font-size: 18px;
     font-weight: 500;
-    line-height: 1.2;
+    line-height: 1.21;
 }
 
 .licencing-subtitle h3 {
@@ -164,7 +163,6 @@ h4 {
 }
 
 /* Project information */
-
 .project-block {
     margin-bottom: 70px;
 }
@@ -260,8 +258,8 @@ h4 {
     display: inline-block;
     border-radius: 10px;
     background: #8A33FD;
-    width: 7px;
-    height: 32px;
+    width: 6px;
+    height: 26px;
     margin-right: 15px;
 }
 
@@ -276,7 +274,7 @@ h4 {
     font-family: 'Core Sans C', sans-serif;
     font-size: 28px;
     font-weight: 600;
-    line-height: 1.2; /* line-height: 33.5px / font-size: 28px */
+    line-height: 1.2;
     letter-spacing: 0.6px;
     text-transform: capitalize;
     vertical-align: top;
@@ -291,7 +289,7 @@ h4 {
     font-family: 'Core Sans C', sans-serif;
     font-size: 20px;
     font-weight: 600;
-    line-height: 1.7; /* line-height: 33,5px / font-size: 20px = 1.675. Округлила до 1.7 */
+    line-height: 1.67;
     letter-spacing: 0.4px;
     text-transform: capitalize;
     margin-bottom: 25px;
@@ -339,7 +337,6 @@ h4 {
 }
 
 /* Jewellery. WHAT WE DO */
-
 .jewellery-create-block {
     margin-bottom: 80px;
 }
@@ -363,7 +360,7 @@ h4 {
     color: #D58417;
     font-family: 'Cormorant Infant', serif;
     font-size: 20px;
-    line-height: 1.00;
+    line-height: 1;
     text-transform: uppercase;
     margin-bottom: 27px;
 }
@@ -371,7 +368,7 @@ h4 {
 .jewellery-create-content h2 {
     color: #000;
     font-size: 64px;
-    line-height: 1.00;
+    line-height: 1;
     text-transform: capitalize;
     margin-bottom: 31px;
 }
@@ -379,7 +376,7 @@ h4 {
 .jewellery-create-content p {
     color: #606060;
     font-size: 30px;
-    line-height: 1.40;
+    line-height: 1.4;
 }
 
 .jewellery-image-block {
@@ -437,7 +434,6 @@ h4 {
 }
 
 /* Profile block */
-
 .example-block {
     margin-bottom: 40px;
 }
@@ -445,7 +441,7 @@ h4 {
 .example-block-container {
     max-width: 450px;
     min-height: 400px;
-    margin: 0 auto;
+    margin: 0 auto 2px;
     border: 4px dashed black;
 }
 
@@ -458,7 +454,9 @@ h4 {
     background-color: #1c1f19;
 }
 
-.game-link {
+.example-content-profile a {
+    display: inline-block;
+    width: 285px;
     border: 4px inset rgba(245, 246, 246, 0.94);
     border-radius: 50px;
     font-size: 26px;
@@ -466,12 +464,7 @@ h4 {
     margin-bottom: 55px;
 }
 
-.game-link a {
-    display: inline-block;
-    width: 285px;
-}
-
-.game-link a:hover {
+.example-content-profile a:hover {
     text-shadow: 2px 2px #07e707;
 }
 
@@ -488,7 +481,6 @@ h4 {
 }
 
 /* Game block */
-
 .example-container-game {
     max-width: 450px;
     min-height: 400px;
@@ -569,7 +561,6 @@ h4 {
 }
 
 /* Footer */
-
 .footer-title {
     padding: 5px;
 }
