--- a/lesson-8/css/fonts.css
+++ b/lesson-8/css/fonts.css
@@ -1,2 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps:wght@400;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
+
+
+
+
+
+
+
+
+
+
